Changed UI for series posts.

--- a/client/content/posts/what-is-your-purpose/_1.the-pursuit-of-success.md
+++ b/client/content/posts/what-is-your-purpose/_1.the-pursuit-of-success.md
@@ -1,11 +1,9 @@
 ---
-title: Part 1
+title: 'The Pursuit of Success'
 description: Growing up I struggled with a poor self-image. I believed I had to achieve perfection to be loved by God and people. My perspective was that I didn't have value to others, and I had to focus on fixing my own problems.
 date: May 27, 2023
 datetime: 2023-05-27
 imageUrl: https://ik.imagekit.io/trentonhicks/what-is-your-purpose.jpg
-head:
-    title: What Is Your Purpose? - Part 1
 author:
     name: Trenton Hicks
     role: Author
@@ -14,8 +12,8 @@ author:
 
 ::PostHeader
 ---
-overline: Part 1
-title: What Is Your Purpose?
+overline: What Is Your Purpose?
+:title: title
 featuredImage: 'https://ik.imagekit.io/trentonhicks/what-is-your-purpose.jpg'
 ---
 ::
